# sql-query-generator

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: database.py  dependencies.py  main.py
backend/app/api/: assist.py  auth.py  dashboard.py  execution.py  projects.py  query.py  schema.py
backend/app/clients/: mysql_client.py  postgres_client.py
backend/app/core/: config.py  encryption.py  security.py
backend/app/models/: project.py  query.py  user.py
backend/app/repositories/: query_repository.py  user_repository.py
backend/app/schemas/: auth.py  project.py  query.py  user.py
backend/app/services/: auth_service.py  execution_service.py  impact_service.py  llm_service.py  project_service.py  query_service.py  schema_service.py  validation_service.py
backend/app/utils/: prompt_builder.py  relationship_builder.py  schema_summary.py
backend/scripts/: seed_demo_db.sql  setup_demo_db.sh
backend/tests/: conftest.py  test_auth.py  test_projects.py  test_validation.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  History.tsx  Login.tsx  ProjectDetail.tsx  Projects.tsx  Signup.tsx
